--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    	<title>Your app name</title>
+    	<title>KU DASHBOARD</title>
     	<style type="text/css">
     		html {
     			overflow: auto;
@@ -25,7 +25,7 @@
     	</style>
  </head>
  <body>
-    	<iframe src="<your streamlit app url>"
+    	<iframe src="<https://congltk1234-ku-dashboard-app-6pxya7.streamlitapp.com/>"
     			frameborder="0"
     			marginheight="0"
     			marginwidth="0"
